# aws_flask_demo

./: .gitignore  .tool-versions  README.md  pyproject.toml
app/: Dockerfile  app.py
terraform/: main.tf  providers.tf  terraform.tfvars.example
